# qcl-sim-cpp

./: .gitignore  CMakeLists.txt
docs/: ClassDiagram.odp
include/common/: CONSTANTS.hpp  utils.hpp
include/matrix/: benchmarkmtx.cpp  matrix.hpp  matrixutils.hpp  testmtx.cpp
include/parsers/: SimFileParser.hpp
include/sim/: SimData.hpp  SimLoop.hpp  SimSettings.hpp
include/solvers/: DMSolver.hpp  MultistepDMSolver.hpp  PropagationEqnSolver.hpp  RNFDSolver.hpp
mfiles/: MS.m  RNFDSolver.m
src/: main.cpp
src/common/: utils.cpp
src/matrix/: matrix.cpp
src/parsers/: SimFileParser.cpp
src/sim/: SimLoop.cpp  SimSettings.cpp
src/solvers/: MultistepDMSolver.cpp  RNFDSolver.cpp
test/: a.out  bytewisecopytest.cpp  typeidtest.cpp
tmp/: matrix.hpp
